# HR-Agent

./: .gitignore  README.md  analysis.py  analysis_model.py  app.py  ats_ui_layout_all_screens.html  cache.py  config.py  embeddings_agent.py  index.html  interview.py  interview_model.py  jd_agent.py  jd_model.py  main.py  override.py  override_log.json  override_logs.json  override_model.py  override_utils.py  package-lock.json  pyproject.toml  ranking.py  report.py  requirement.txt  resume.py  resume_agent.py  resume_model.py  score.js  score_model.py  scoring_agent.py  scratch_test.py  style.css  workflow.py
Creating .env File_files/: frame.html  saved_resource(1).html  saved_resource.html
