[project]
name = "hr-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "automium-web>=0.1.1",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "google>=3.0.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "resume-parser>=0.8.4",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "utils>=1.0.2",
    "utils-config>=1.0.0",
]
